--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-  background-color: black;
-}
-
 *{
   margin:0;
   padding:0;
@@ -10,8 +6,22 @@ body{
   font-family:arial,sans-serif;
   font-size:100%;
   margin:1em;
-  background:#666;
+
 }
+.jumbotron {
+  background-image: url(background.svg);
+  background-repeat: repeat;
+}
+
+.jumbotron .row {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.searchBox{
+  margin-right:10px;
+}
+
 h2,p{
   font-size:100%;
   font-weight:normal;
@@ -92,3 +102,18 @@ ul li a:hover,ul li a:focus{
 ol{text-align:center;}
 ol li{display:inline;padding-right:1em;}
 ol li a{color:#fff;}
+
+.box {
+  position:relative;
+  max-width: 100px;
+  max-height: 100px;
+  margin:100px;
+}
+
+#thumbnails {
+  max-width: 800px;
+  background-image: url(cork.jpg);
+  background-repeat: repeat;
+  margin-left: auto;
+  margin-right: auto;
+}
