--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body{
   font-family:arial,sans-serif;
   font-size:100%;
   margin:1em;
+  background-image: url(background.svg);
+  background-repeat: repeat;
 
 }
 .jumbotron {
@@ -116,4 +118,7 @@ ol li a{color:#fff;}
   background-repeat: repeat;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 20px;
+  min-height: 400px;
+
 }
